# devsecops-dsoht25d-03

./: Makefile  README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .gitignore  Dockerfile.prod  README.md  pyproject.toml
backend/app/api/v1/endpoints/: posts.py
backend/app/core/: db.py
backend/app/schemas/: social.py
backend/scripts/: create_test_users.py  reset_db.py
backend/tests/e2e/step_defs/: test_login.py  test_registration.py  test_user_dashboard.py
backend/tests/unit/: __init__.py  test_auth_schemas.py  test_models.py  test_security.py
docs/: UNIT_TEST_IMPLEMENTATION_SUMMARY.md
docs/features/: circle-role.feature  registration.feature
frontend/: .dockerignore  Dockerfile.prod  package-lock.json  package.json
frontend/src/components/posts/: PostCard.jsx
frontend/src/contexts/: AuthProvider.jsx
frontend/src/hooks/: useCirclePermissions.js
frontend/src/pages/: SearchPage.jsx
frontend/src/services/: auth.service.js  circle.service.js  circleMember.service.js  search.service.js
frontend/tests/unit/: AddMemberModal.test.jsx
